--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,17 +15,24 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:src="@mipmap/ic_launcher"
-            android:layout_marginBottom="48dp"
             android:layout_gravity="center"
             android:contentDescription="@string/app_name"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:text="@string/login"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:layout_marginBottom="48dp" />
         <EditText
             android:id="@+id/email_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:hint="@string/email_address"
-            android:drawableEnd="@drawable/ic_mail"
-            android:drawableRight="@drawable/ic_mail"
+            android:drawableStart="@drawable/ic_mail"
+            android:drawableLeft="@drawable/ic_mail"
             android:drawablePadding="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
@@ -41,10 +48,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:gravity="end"
             android:hint="@string/password"
-            android:drawableEnd="@drawable/ic_lock"
-            android:drawableRight="@drawable/ic_lock"
+            android:drawableStart="@drawable/ic_lock"
+            android:drawableLeft="@drawable/ic_lock"
             android:drawablePadding="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
@@ -60,13 +66,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login"
+            android:textAllCaps="false"
             android:textSize="18sp"
             android:textColor="@color/colorPrimaryDark"
-            android:textStyle="bold"
             android:background="@drawable/white_rect_background"
-            android:layout_gravity="start"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_gravity="end"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"/>
 
         <ProgressBar
