--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -16,17 +16,24 @@
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:src="@mipmap/ic_launcher"
-            android:layout_marginBottom="48dp"
             android:layout_gravity="center"
             android:contentDescription="@string/app_name"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:text="@string/register"
+            android:textColor="@android:color/white"
+            android:textAlignment="center"
+            android:layout_marginBottom="48dp" />
         <EditText
             android:id="@+id/username_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
             android:hint="@string/username"
-            android:drawableEnd="@drawable/ic_person_white"
-            android:drawableRight="@drawable/ic_person_white"
+            android:drawableStart="@drawable/ic_person_white"
+            android:drawableLeft="@drawable/ic_person_white"
             android:drawablePadding="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
@@ -43,8 +50,8 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:hint="@string/email_address"
-            android:drawableEnd="@drawable/ic_mail_white"
-            android:drawableRight="@drawable/ic_mail_white"
+            android:drawableStart="@drawable/ic_mail_white"
+            android:drawableLeft="@drawable/ic_mail_white"
             android:drawablePadding="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
@@ -60,10 +67,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:gravity="end"
             android:hint="@string/password"
-            android:drawableEnd="@drawable/ic_lock_white"
-            android:drawableRight="@drawable/ic_lock_white"
+            android:drawableStart="@drawable/ic_lock_white"
+            android:drawableLeft="@drawable/ic_lock_white"
             android:drawablePadding="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
@@ -80,12 +86,12 @@
             android:layout_height="wrap_content"
             android:text="@string/register"
             android:textSize="18sp"
+            android:textAllCaps="false"
             android:textColor="@android:color/white"
-            android:textStyle="bold"
             android:background="@drawable/dark_rect_background"
-            android:layout_gravity="start"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_gravity="end"
+            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginBottom="16dp"/>
 
         <ProgressBar
