--- a/app/src/main/res/drawable/white_rect_background.xml
+++ b/app/src/main/res/drawable/white_rect_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white"/>
+    <solid android:color="@android:color/holo_red_light"/>
     <padding android:right="2dp" android:left="2dp" android:bottom="8dp" android:top="8dp"/>
     <corners android:radius="2dp"/>
 </shape>
