--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -27,11 +27,10 @@
        </android.support.design.widget.AppBarLayout>
 
        <FrameLayout
+           android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
-           android:layout_weight="1">
-
-       </FrameLayout>
+           android:layout_weight="1"/>
    </LinearLayout>
 
     <android.support.design.widget.NavigationView
