--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -26,13 +26,13 @@
             android:textAlignment="center"
             android:layout_marginBottom="48dp" />
         <EditText
-            android:id="@+id/email_edit_text"
+            android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:hint="@string/email_address"
-            android:drawableStart="@drawable/ic_mail"
-            android:drawableLeft="@drawable/ic_mail"
+            android:drawableStart="@drawable/ic_mail_white"
+            android:drawableLeft="@drawable/ic_mail_white"
             android:drawablePadding="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
@@ -40,17 +40,17 @@
             android:layout_marginStart="8dp"
             android:background="@drawable/white_rect_background"
             android:layout_marginBottom="8dp"
-            android:textColorHint="@color/colorPrimaryDark"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
             android:textSize="18sp"/>
         <EditText
-            android:id="@+id/password_edit_text"
+            android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:hint="@string/password"
-            android:drawableStart="@drawable/ic_lock"
-            android:drawableLeft="@drawable/ic_lock"
+            android:drawableStart="@drawable/ic_lock_white"
+            android:drawableLeft="@drawable/ic_lock_white"
             android:drawablePadding="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
@@ -58,17 +58,17 @@
             android:layout_marginStart="8dp"
             android:background="@drawable/white_rect_background"
             android:layout_marginBottom="8dp"
-            android:textColorHint="@color/colorPrimaryDark"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
             android:textSize="18sp"/>
         <Button
-            android:id="@+id/login_button"
+            android:id="@+id/loginButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/login"
             android:textAllCaps="false"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textColor="@android:color/white"
             android:background="@drawable/white_rect_background"
             android:layout_gravity="end"
             android:layout_marginRight="8dp"
@@ -76,7 +76,7 @@
             android:layout_marginBottom="16dp"/>
 
         <ProgressBar
-            android:id="@+id/prgs_loading"
+            android:id="@+id/loadingProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:visibility="invisible"/>
